crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__docs_data_posts.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table posts {\n    id: integer() primaryKey autoIncrement\n    author: integer() notNull references(users.id)\n    title: text() notNull\n    body: text()\n}\n"
---
TableDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: "posts",
    },
    columns: [
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 7,
                    },
                },
                value: "id",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 2,
                        column: 18,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 16,
                            },
                        },
                        value: Var(
                            "integer",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 19,
                            },
                            end: Position {
                                line: 2,
                                column: 29,
                            },
                        },
                        value: "primaryKey",
                    },
                    args: [],
                },
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 30,
                            },
                            end: Position {
                                line: 2,
                                column: 43,
                            },
                        },
                        value: "autoIncrement",
                    },
                    args: [],
                },
            ],
        },
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 11,
                    },
                },
                value: "author",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 13,
                    },
                    end: Position {
                        line: 3,
                        column: 22,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 13,
                            },
                            end: Position {
                                line: 3,
                                column: 20,
                            },
                        },
                        value: Var(
                            "integer",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 23,
                            },
                            end: Position {
                                line: 3,
                                column: 30,
                            },
                        },
                        value: "notNull",
                    },
                    args: [],
                },
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 31,
                            },
                            end: Position {
                                line: 3,
                                column: 41,
                            },
                        },
                        value: "references",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 42,
                                },
                                end: Position {
                                    line: 3,
                                    column: 50,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 42,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 47,
                                        },
                                    },
                                    value: Var(
                                        "users",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 48,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 50,
                                        },
                                    },
                                    value: "id",
                                },
                            },
                        },
                    ],
                },
            ],
        },
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 4,
                        column: 10,
                    },
                },
                value: "title",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 12,
                    },
                    end: Position {
                        line: 4,
                        column: 18,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 12,
                            },
                            end: Position {
                                line: 4,
                                column: 16,
                            },
                        },
                        value: Var(
                            "text",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 19,
                            },
                            end: Position {
                                line: 4,
                                column: 26,
                            },
                        },
                        value: "notNull",
                    },
                    args: [],
                },
            ],
        },
        Column {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 9,
                    },
                },
                value: "body",
            },
            builder: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 11,
                    },
                    end: Position {
                        line: 5,
                        column: 17,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 11,
                            },
                            end: Position {
                                line: 5,
                                column: 15,
                            },
                        },
                        value: Var(
                            "text",
                        ),
                    },
                    arguments: [],
                },
            },
            modifiers: [],
        },
    ],
}
