crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_builder.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { id: }"
---
Builder(
    Start(
        1,
        19,
    ),
    1,
    19,
)
