crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_builder_propagates.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { id: text(\"x }"
---
Builder(
    Call(
        Arg(
            String(
                Endless,
                1,
                28,
            ),
            1,
            24,
        ),
        1,
        23,
    ),
    1,
    19,
)
