crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_column_start.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { 5 }"
---
Column(
    1,
    15,
)
