crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_comma_between_modifiers.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { id: integer() notNull, unique }"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 13,
        },
        boundary: Position {
            line: 1,
            column: 36,
        },
        unexpected: Position {
            line: 1,
            column: 36,
        },
    },
)
