crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_missing_colon.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { id integer() }"
---
Colon(
    1,
    18,
)
