crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_modifier_arg.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { id: integer() default( }"
---
ModifierArg(
    Start(
        1,
        38,
    ),
    1,
    38,
)
