crates/alder-parse/src/item/snapshots/alder_parse__item__table__tests__error_modifier_arg_unclosed.snap
---
source: crates/alder-parse/src/item/table.rs
description: "table users { id: integer() default(now"
---
ModifierArgEnd(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 36,
        },
        boundary: Position {
            line: 1,
            column: 40,
        },
        unexpected: Position {
            line: 1,
            column: 40,
        },
    },
)
